# profecia

./: .env.example  .gitignore  README.md  docker-compose.yml  events-examples.json
backend/: .dockerignore  Cargo.toml  Dockerfile  README.md
backend/api/: Cargo.toml
backend/api/src/: error.rs  main.rs  solana_integration.rs
backend/api/src/entity/: buyorder.rs  event.rs  identity.rs  market.rs  market_snapshot.rs  mod.rs  position.rs  user.rs
backend/api/src/route/: extractors.rs  mod.rs
backend/api/src/route/event/: add_market.rs  chart.rs  create.rs  create_bulk.rs  mod.rs  percentages.rs  resolve.rs  update_event.rs  update_market.rs
backend/api/src/route/event/buyorder/: buy.rs  cancel.rs  list.rs  mod.rs
backend/api/src/route/event/position/: list.rs  mod.rs
backend/api/src/route/user/: airdrop.rs  balance.rs  leaderboard.rs  login.rs  me.rs  mod.rs  positions.rs  register.rs
backend/api/src/state/: buyorder.rs  event.rs  leaderboard.rs  market.rs  market_snapshot.rs  mod.rs  position.rs  user.rs
backend/blockchain_client/: Cargo.toml
backend/blockchain_client/src/: lib.rs  main.rs
backend/blockchain_core/: Cargo.toml
backend/blockchain_core/src/: error.rs  instructions.rs  lib.rs
backend/blockchain_core/src/accounts/: event.rs  order.rs
backend/blockchain_program/: .dockerignore  Cargo.toml  Dockerfile  entrypoint.sh  run.sh  txtx.yml
backend/blockchain_program/PRIVATE_KEY/: ProirMXDTFF4AEqGyZVKPhWte4chANDd1c4Y8w7Nsd4.json  id.json
backend/blockchain_program/runbooks/: README.md
backend/blockchain_program/runbooks/deployment/: main.tx
backend/blockchain_program/src/: lib.rs  utils.rs
backend/blockchain_program/src/instructions/: add_option.rs  close_event.rs  create_empty_event.rs  create_event.rs  create_order.rs  fake_cancel_order.rs  fake_create_order.rs  fake_get_reward.rs  fake_match_order.rs  mod.rs  transfer_shares.rs
backend/src/entity/: event.rs  market.rs  mod.rs  session.rs  user.rs
backend/src/route/event/: info.rs  list.rs
backend/src/route/user/: logout.rs  mod.rs
backend/src/state/: event.rs  session.rs  user.rs
backend/src/utils/: mod.rs  password.rs
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
frontend/src/: app.d.ts  hooks.server.ts
frontend/src/lib/: types.ts
frontend/src/lib/components/: airdrop-button.svelte  avatar.svelte  dark-mode-toggle.svelte  market-card.svelte
frontend/src/lib/components/ui/field/: field-description.svelte  field-group.svelte  field-label.svelte  index.ts
frontend/src/lib/components/ui/select/: select-content.svelte  select-group-heading.svelte  (+5 more)
frontend/src/lib/fetchers/: event.ts  home.ts
frontend/src/lib/hooks/: use-polling.svelte.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte  +page.ts  layout.css  market-card.svelte
frontend/src/routes/admin/: +page.server.ts  +page.svelte  bulk-create-event-dialog.svelte  create-event-dialog.svelte  create-market-dialog.svelte  edit-event-dialog.svelte  edit-market-dialog.svelte  error-banner.svelte  events-table.svelte  market-fields.svelte  resolve-market-dialog.svelte
frontend/src/routes/api/[...path]/: +server.ts
frontend/src/routes/event/[id]/: +page.server.ts  +page.svelte  +page.ts  active-market-row.svelte  buy-order-dialog.svelte  buy-orders-table.svelte  event-chart.svelte  market-order-book.svelte  positions-table.svelte  resolved-market-row.svelte
frontend/src/routes/leaderboard/: +page.server.ts  +page.svelte
frontend/src/routes/login/: +page.server.ts  +page.svelte  login-form.svelte
frontend/src/routes/logout/: +page.server.ts
frontend/src/routes/profile/: +page.server.ts  +page.svelte
frontend/src/routes/register/: +page.server.ts  +page.svelte  register-form.svelte
rpxy/config/: config.toml
(+1 files in other folders)
